# scatter

./: CMakeLists.txt  README.md  scatter-bf.spec
debian/: changelog  control  copyright  rules  scatter-dev.install  scatter.install
example/: CMakeLists.txt  client.cpp  resolver.cpp
include/scatter/: address.hpp  broadcast.hpp  connection.hpp  db.hpp  endian.hpp  exception.hpp  map.hpp  message.hpp  node.hpp  pool.hpp  resolver.hpp  route.hpp  scatter.hpp  serialize.hpp  server.hpp
src/: CMakeLists.txt  address.cpp  broadcast.cpp  connection.cpp  exception.cpp  map.cpp  message.cpp  node.cpp  pool.cpp  route.cpp  scatter.cpp  server.cpp  server_main.cpp
test/: CMakeLists.txt  dmap.cpp  main.cpp
